<resources>
    <string name="app_name">移动私有云客户端</string>
    <string name="phone">手机号</string>
    <string name="phone_hint">请输入您的账号</string>
    <string name="pwd">密码</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_or_up">登录或注册</string>
    <string name="finish">完成</string>
    <string name="find_password">忘记密码</string>
    <string name="find_password_ask">忘记密码?</string>
    <string name="remember_password">记住密码</string>
    <string name="now_login_time">当前登录时间</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <string name="hotel_address">详细地址</string>
    <string name="quit_login">退出登录</string>
    <string name="cancel">取消</string>
    <string name="name">姓名</string>
    <string name="id_card_number">身份证号</string>
    <string name="enter">确定</string>
    <string name="please_input_name">请输入客户姓名</string>
    <string name="enter_msg_verify">请输入您的短信验证码</string>
    <string name="get_msg_verify">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="back">返回</string>
    <string name="exchange_room">换房</string>
    <string name="enter_logout">确定退出登录？</string>
    <string name="see_cache">查看暂存</string>
    <string name="des">详情</string>
    <string name="agree">同意</string>
    <string name="no_agree">不同意</string>
    <string name="reset_password">重置密码</string>
    <string name="enter_password_twice">请输入两次新密码</string>
    <string name="enter_password_first">请输入新密码</string>
    <string name="enter_password_second">请再次输入新密码</string>
    <string name="reset_password_suc">修改密码成功</string>
    <string name="submit">提交</string>
    <string name="go_login">去登录</string>
    <string name="start_face_verify">开始核验</string>
    <string name="updata">加密上传云端</string>
</resources>
