<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/body_bck"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:srcCompat="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/white_raid"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingLeft="21dp"
        android:paddingRight="21dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="@color/textGary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:maxLength="11"
            android:text=""
            android:hint="@string/phone_hint"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pwd"
            android:textColor="@color/textGary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/login_reb_pwd"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:button="@drawable/radio_check"
            android:checked="true"
            android:text="@string/remember_password"
            android:textColor="@color/textBlackGary" />


        <TextView
            android:id="@+id/login_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_raid"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>